[gd_scene load_steps=11 format=3 uid="uid://dwm5hwgjmah1o"]

[ext_resource type="Script" path="res://scenes/ui/gameover.gd" id="1_57y74"]
[ext_resource type="Texture2D" uid="uid://c0oxujiepqb5j" path="res://assets/ui/Menu01.png" id="2_1x5ak"]
[ext_resource type="Texture2D" uid="uid://byqvpv034qnqn" path="res://assets/ui/yellow_button00.png" id="3_tqadt"]
[ext_resource type="Texture2D" uid="uid://cs0li20dp2u8c" path="res://assets/ui/green_button00.png" id="4_skd1i"]
[ext_resource type="Texture2D" uid="uid://duc4o3v6o18gf" path="res://assets/ui/blue_button00.png" id="5_0cl8t"]
[ext_resource type="FontFile" uid="uid://bf0h6ctalomy0" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="6_73mta"]
[ext_resource type="Texture2D" uid="uid://dm87yonpd56pb" path="res://assets/ui/sad.png" id="8_aefkx"]
[ext_resource type="AudioStream" uid="uid://n2asnmfo5ngp" path="res://assets/audio/short-ukulele-jingle-cheerful-happy-and-bright-148415.mp3" id="9_o0ic7"]

[sub_resource type="LabelSettings" id="LabelSettings_3gf6f"]
font = ExtResource("6_73mta")
font_size = 50
font_color = Color(0.771166, 1, 0.797358, 1)
outline_size = 11
outline_color = Color(0.132927, 0.132927, 0.132927, 1)
shadow_size = 32
shadow_color = Color(0, 0, 0, 0.184314)
shadow_offset = Vector2(-9.21, 6.385)

[sub_resource type="LabelSettings" id="LabelSettings_o54xe"]
font = ExtResource("6_73mta")
font_size = 130
font_color = Color(0.884012, 0.409728, 3.85046e-07, 1)
outline_size = 15
outline_color = Color(0.371281, 0.371281, 0.371281, 1)
shadow_size = 50
shadow_color = Color(0, 0, 0, 0.713726)
shadow_offset = Vector2(-8.92, 11.045)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57y74")
nextLevel = "res://scenes/levels/level_1.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -4.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1x5ak")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = -105.5
offset_right = 376.0
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_tqadt")
texture_pressed = ExtResource("4_skd1i")
texture_hover = ExtResource("5_0cl8t")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"
label_settings = SubResource("LabelSettings_3gf6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_tqadt")
texture_pressed = ExtResource("4_skd1i")
texture_hover = ExtResource("5_0cl8t")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"
label_settings = SubResource("LabelSettings_3gf6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AboutButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_tqadt")
texture_pressed = ExtResource("4_skd1i")
texture_hover = ExtResource("5_0cl8t")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/AboutButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ABOUT"
label_settings = SubResource("LabelSettings_3gf6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -343.0
offset_top = -289.0
offset_right = 351.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_o54xe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(347, 419)
texture = ExtResource("8_aefkx")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_o0ic7")
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
